fixtures/type_errors/bad_tuple_element_2.tl
f : Int { (1,) }
---
Error:

   1: f : Int { (1,) }
                ^^^^
                 expected this to have the type Int but it actually has the type (a,)
